# 2markdown

./: .gitattributes  .gitignore  2Markdown.pyw  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: roadmap.md  supported-formats.md  troubleshooting.md
scripts/: install_converters.bat  run_windows.pyw  run_windows.vbs
tests/: __init__.py  test_core.py  test_extended_converters.py  test_i18n.py
two_markdown/: __init__.py  app.py  batch.py  cli.py  config.py  context.py  dependencies.py  errors.py  i18n.py  manifest.py  models.py  report.py  scanner.py  textio.py  ui_theme.py  utils.py  writer.py
two_markdown/converters/: __init__.py  archive_converter.py  audio_converter.py  csv_converter.py  docx_converter.py  eml_converter.py  epub_converter.py  html_converter.py  image_ocr_converter.py  ipynb_converter.py  msg_converter.py  opendocument_converter.py  org_converter.py  pdf_converter.py  pptx_converter.py  rst_converter.py  rtf_converter.py  text_converter.py  xlsx_converter.py
